==> 2-droneflygg/4-Atomicfly/src/main/drivers/bus_i2c_stm32f10x.c <==
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>
#include <string.h>
#include "platform.h"
#include "drivers/io.h"
#include "drivers/time.h"
#include "drivers/nvic.h"
#include "drivers/rcc.h"
#include "drivers/bus_i2c.h"
#include "drivers/bus_i2c_impl.h"
#define IOCFG_I2C_PU IO_CONFIG(GPIO_Mode_AF, 0, GPIO_OType_OD, GPIO_PuPd_UP)
#define IOCFG_I2C    IO_CONFIG(GPIO_Mode_AF, 0, GPIO_OType_OD, GPIO_PuPd_NOPULL)

bool i2cWriteBuffer(I2CDevice device, uint8_t addr_, uint8_t reg_, uint8_t len_, uint8_t *data)
{
	// 判断IIC设备合法性
    if (device == I2CINVALID || device > I2CDEV_COUNT) {
        return false;
    }
	// 获取IIC设备
    I2C_TypeDef *I2Cx = i2cDevice[device].reg;
    if (!I2Cx) {
        return false;
    }
	// 获取IIC状态
    i2cState_t *state = &i2cDevice[device].state;
    if (state->busy) {
        return false;
    }
	// 获取IIC超时时间
    uint32_t timeout = I2C_DEFAULT_TIMEOUT;
	// 创建传输信息
    state->addr = addr_ << 1;
    state->reg = reg_;
    state->writing = 1;
    state->reading = 0;
    state->write_p = data;
    state->read_p = data;
    state->bytes = len_;
    state->busy = 1;
    state->error = false;
	// 确保没有事件中断
    if (!(I2Cx->CR2 & I2C_IT_EVT)) {                                 
    	// 确保总线没有正在传输
        if (!(I2Cx->CR1 & I2C_CR1_START)) {             
			// 确保总线没有正在传输 - 等待传输完成
            while (I2Cx->CR1 & I2C_CR1_STOP && --timeout > 0) {; }      
			// 如果超时则进行硬件错误处理
            if (timeout == 0)
                return i2cHandleHardwareFailure(device);
			// 生成IIC通信起始信号
            I2C_GenerateSTART(I2Cx, ENABLE);                            
        }
		// 允许中断再次触发 - 在中断服务函数进行发送
        I2C_ITConfig(I2Cx, I2C_IT_EVT | I2C_IT_ERR, ENABLE);            
    }
    return true;
}

bool i2cReadBuffer(I2CDevice device, uint8_t addr_, uint8_t reg_, uint8_t len, uint8_t* buf)
{
	// 判断IIC设备合法性
    if (device == I2CINVALID || device > I2CDEV_COUNT) {
        return false;
    }
	// 获取IIC设备
    I2C_TypeDef *I2Cx = i2cDevice[device].reg;
    if (!I2Cx) {
        return false;
    }
	// 获取IIC状态
    i2cState_t *state = &i2cDevice[device].state;
    if (state->busy) {
        return false;
    }
	// 获取IIC超时时间
    uint32_t timeout = I2C_DEFAULT_TIMEOUT;
	// 创建传输信息
    state->addr = addr_ << 1;
    state->reg = reg_;
    state->writing = 0;
    state->reading = 1;
    state->read_p = buf;
    state->write_p = buf;
    state->bytes = len;
    state->busy = 1;
    state->error = false;
	// 确保没有事件中断
    if (!(I2Cx->CR2 & I2C_IT_EVT)) {                    
		// 确保总线没有正在传输
        if (!(I2Cx->CR1 & I2C_CR1_START)) {      
			// 确保总线没有正在传输 - 等待传输完成
            while (I2Cx->CR1 & I2C_CR1_STOP && --timeout > 0) {; }   
			// 如果超时则进行硬件错误处理
            if (timeout == 0)
                return i2cHandleHardwareFailure(device);
			// 生成IIC通信起始信号 
            I2C_GenerateSTART(I2Cx, ENABLE);                          
        }
		// 允许中断再次触发 - 在中断服务函数进行接收
        I2C_ITConfig(I2Cx, I2C_IT_EVT | I2C_IT_ERR, ENABLE);            
    }
    return true;
}

void i2cInit(I2CDevice device)
{
	NVIC_InitTypeDef nvic;
    I2C_InitTypeDef i2cInit;
	
	// 判断是否有IIC设备
    if (device == I2CINVALID)
        return;
	// 获取IIC设备信息
    i2cDevice_t *pDev = &i2cDevice[device];    
	// 获取IIC硬件信息
    const i2cHardware_t *hw = pDev->hardware;  
	// 获取总线IO
    const IO_t scl = pDev->scl;				   
    const IO_t sda = pDev->sda;
	// 判断合法性
    if (!hw || IOGetOwner(scl) || IOGetOwner(sda)) {
        return;
    }
	// 获取IIC设备
    I2C_TypeDef *I2Cx = hw->reg;
	// 复位IIC设备状态
    memset(&pDev->state, 0, sizeof(pDev->state));

	// 注册IO_pin，设置所有者和资源
    IOInit(scl, OWNER_I2C_SCL, RESOURCE_INDEX(device));
    IOInit(sda, OWNER_I2C_SDA, RESOURCE_INDEX(device));

    // 使能IIC时钟
    RCC_ClockCmd(hw->rcc, ENABLE);
	
	// IIC中断配置
    I2C_ITConfig(I2Cx, I2C_IT_EVT | I2C_IT_ERR, DISABLE);

    // IO配置初始化 
    IOConfigGPIOAF(scl, pDev->pullUp ? IOCFG_I2C_PU : IOCFG_I2C, pDev->sclAF);
    IOConfigGPIOAF(sda, pDev->pullUp ? IOCFG_I2C_PU : IOCFG_I2C, pDev->sdaAF);

	// 初始化IIC为默认值
    I2C_DeInit(I2Cx);
	// 将IIC结构体初始化为默认值
    I2C_StructInit(&i2cInit);

	// 禁用EVT和ERR中断 - 它们在第一个请求时启用
    I2C_ITConfig(I2C2, I2C_IT_EVT | I2C_IT_ERR, DISABLE);    
	// 配置IIC
    i2cInit.I2C_Mode = I2C_Mode_I2C;									// IIC模式
    i2cInit.I2C_DutyCycle = I2C_DutyCycle_2;							// 快速模式工作周期
    i2cInit.I2C_OwnAddress1 = 0;										// 指定第一个设备地址
    i2cInit.I2C_Ack = I2C_Ack_Enable;									// 启用IIC应答
    i2cInit.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;		// 7位应答
    i2cInit.I2C_ClockSpeed = 800000;                                    // IIC时钟速度 - 测试了800khz的最高速度，没有问题
	// 使能IIC
    I2C_Cmd(I2C2, ENABLE);
	// 初始化IIC
    I2C_Init(I2C2, &i2cInit);
	// 使能IIC时钟扩展
    I2C_StretchClockCmd(I2C2, ENABLE);

    // 初始化IIC错误中断
    nvic.NVIC_IRQChannel = I2C2_ER_IRQn;
    nvic.NVIC_IRQChannelPreemptionPriority = NVIC_PRIORITY_BASE(NVIC_PRIO_I2C_ER);
    nvic.NVIC_IRQChannelSubPriority = NVIC_PRIORITY_SUB(NVIC_PRIO_I2C_ER);
    nvic.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&nvic);

    // 初始化IIC事件中断
    nvic.NVIC_IRQChannel = I2C2_EV_IRQn;
    nvic.NVIC_IRQChannelPreemptionPriority = NVIC_PRIORITY_BASE(NVIC_PRIO_I2C_EV);
    nvic.NVIC_IRQChannelSubPriority = NVIC_PRIORITY_SUB(NVIC_PRIO_I2C_EV);
    NVIC_Init(&nvic);
}
