==> hpmicro/betaflight/src/main/drivers/hpmicro/bus_i2c_hpmicro.c <==
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>
#include <string.h>
#include "board.h"
#include "platform.h"
#include "drivers/io.h"
#include "drivers/time.h"
#include "drivers/nvic.h"
#include "drivers/rcc.h"
#include "drivers/bus_i2c.h"
#include "drivers/bus_i2c_impl.h"
#include "drivers/bus_i2c_utils.h"
#include "hpm_i2c_drv.h"
#include "hpm_soc.h"
#include "hpm_clock_drv.h"
#include "hpm_batt_iomux.h"
#include "hpm_pmic_iomux.h"
#define TEST_TRANSFER_DATA_IN_BYTE  (128U)
#define IOCFG_I2C   IOCFG_AF_OD

bool i2cWriteBuffer(I2CDevice device, uint8_t addr_, uint8_t reg_, uint8_t len_, uint8_t *data)
{
    hpm_stat_t status;
    if (device == I2CINVALID || device >= I2CDEV_COUNT) {
        return false;
    }

    I2C_TypeDef *I2Cx = i2cDevice[device].reg;

    if (!I2Cx) {
        return false;
    }

    i2cState_t *state = &i2cDevice[device].state;
    if (state == I2C_START) {
        return false;
    }
    status = i2c_master_address_write(I2Cx, addr_, (uint8_t *)&reg_, 1, data, len_);
    if (status_success != status) {
        return false;
    }
    return true;
}

bool i2cReadBuffer(I2CDevice device, uint8_t addr_, uint8_t reg_, uint8_t len, uint8_t* buf)
{
    hpm_stat_t status;
    if (device == I2CINVALID || device >= I2CDEV_COUNT) {
        return false;
    }

    I2C_TypeDef *I2Cx = i2cDevice[device].reg;
    if (!I2Cx) {
        return false;
    }

    i2cState_t *state = &i2cDevice[device].state;
    if (state == I2C_START) {
        return false;
    }
    status = i2c_master_address_read(I2Cx, addr_, (uint8_t *)&reg_, 1, buf, len);
    if (status_success != status) {
        return false;
    }
    return true;
}

void i2cInit(I2CDevice device)
{
    hpm_stat_t stat;
    i2c_config_t config = {0};
    uint32_t freq;
    if (device == I2CINVALID)
        return;

    i2cDevice_t *pDev = &i2cDevice[device];
    const i2cHardware_t *hw = pDev->hardware;
    const IO_t scl = pDev->scl;
    const IO_t sda = pDev->sda;

    if (!hw || IOGetOwner(scl) || IOGetOwner(sda)) {
        return;
    }

    I2C_TypeDef *I2Cx = hw->reg;

    memset(&pDev->state, 0, sizeof(pDev->state));

    IOInit(scl, OWNER_I2C_SCL, RESOURCE_INDEX(device));
    IOInit(sda, OWNER_I2C_SDA, RESOURCE_INDEX(device));

    // Enable RCC
    if (hw->rcc) {
        clock_add_to_group(hw->rcc, 0);
    }

    board_i2c_bus_clear(I2Cx);
    // Init pins
    IOConfigGPIOAF(scl, pDev->pullUp ? IOCFG_AF_OD_UP : IOCFG_AF_OD, pDev->sclAF, pDev->sclbpAF);
    IOConfigGPIOAF(sda, pDev->pullUp ? IOCFG_AF_OD_UP : IOCFG_AF_OD, pDev->sdaAF, pDev->sdabpAF);


    config.i2c_mode = i2c_mode_fast;
    config.is_10bit_addressing = false;
    freq = clock_get_frequency(hw->rcc);
    stat = i2c_init_master(I2Cx, freq, &config);
    if (stat != status_success) {
        while(1);
    }
}
